# query-ui

./: .gitignore  CMakeLists.standalone.txt  CMakeLists.txt  README.license.txt  README.md  launch-cbq-gui.bat  launch-cbq-gui.sh  pluggable-ui-query.json.in  tmp  ui_server.go
query-ui/: app-standalone.css  app-standalone.js  cmake_install.cmake  head.frag.html  index-tutorial.html  index.html  index.html.bootstrap  index2.html  mn_query.html  mn_query_controller.js  mn_query_monitor_controller.js  mn_query_service.js  mn_settings_notifications_service.js  query.css  query.html  query.js  query_monitoring.html  query_toplevel.html  qw.query.service.js  qw_constants_service.js  qw_constants_service_cbas.js  qw_constants_service_standalone.js  qw_doc_editor_controller.js  qw_doc_editor_controller.js.bak  qw_doc_editor_service.js  qw_fix_long_number_service.js  qw_focus_me.js  qw_import_controller.js  qw_import_service.js  qw_json_csv_service.js  qw_query_controller.js  qw_query_controller.js.rej  qw_query_doc_editor.js  qw_query_monitor_controller.js  qw_query_plan_service.js  qw_query_service.js  qw_query_service.js.rej  tutorial.html  validate_query_service.js
query-ui/angular-component-wrappers/: qw.monitor.wrapper.component.js  qw.monitor.wrapper.html  qw.query.wrapper.component.js  qw.query.wrapper.html  qw.udf.wrapper.component.js  qw.udf.wrapper.html  qw.wrapper.module.js
query-ui/angular-components/: qw.documents.component.js  qw.documents.html  qw.documents.module.js  qw.documents.subnav.js  qw.import.component.js  qw.import.html
query-ui/libs/: jquery-ui.css  (+6 more)
(+219 files in other folders)
